updated the useIsMobile hook: wrapped the debounce function in a useCallback hook and ensured the function is  invoked. changed the mode option of api fetchbase query to no-cors. reverted the styling of the slider as per the previous pr

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,32 @@
   border-image-slice: 1;
 }
 
+.single-slide-wrapper {
+  display: flex;
+  justify-content: center;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+.single-slide .slick-list {
+  display: flex !important;
+  justify-content: center !important;
+  width: fit-content !important;
+  max-width: 100% !important;
+  padding: 0 !important;
+}
+
+.single-slide .slick-track {
+  display: flex !important;
+  justify-content: center !important;
+  margin: 0 !important;
+}
+
+.single-slide .slick-slide {
+  display: flex !important;
+  justify-content: center !important;
+}
+
 @supports (color: color(display-p3 0.471 0.471 0.98)) {
   .custom-gradient-border {
     border-image-source: linear-gradient(
